--- a/discord bot/config.json
+++ b/discord bot/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "",
+    "token": env.process.TOKEN,
     "apiurl": "http://127.0.0.1:5000/",
     "secretkey": "verysecretpassword"
 }
